<resources>
    <string name="app_name">Vaulthub</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_after_login">AfterLoginActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main_display">MainDisplay</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="saved_accounts">Saved Accounts</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="usage">Usage</string>
    <string name="add_account">Add Account</string>
    <string name="remove_account">Remove Account</string>
    <string name="update_account">Update account</string>
    <string name="delete_account">Delete Account</string>
    <string name="returnn">Return</string>
    <string name="github">Github</string>
    <string name="about_vaulthub">About Vaulthub</string>
    <string name="vaulthub">VAULTHUB</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="enter_your_password_to_confirm_deletion_of_account">Enter your password to confirm deletion of account</string>
    <string name="delete_login">Delete Login</string>
</resources>