<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancelBtn"
        app:layout_constraintEnd_toEndOf="@+id/numPassword" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="298dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/numPassword" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/numPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="196dp"
        android:labelFor="@id/txtUsername"
        android:text="@string/username"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txtUsername"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="89dp"
        android:layout_marginBottom="86dp"
        android:labelFor="@id/numPassword"
        android:text="@string/password"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/cancelBtn"
        app:layout_constraintStart_toStartOf="@+id/numPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>